--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 </head>
 <body>
     <script>
-        let add7 = function (number) { //function expression
+        // function expression
+        let add7 = function (number) {
             return number + 7;
         };
         
         console.log(add7(5));
+
+        // function declaration
+        function add7 (number) {
+            return number + 7;
+        }
+
+        console.log(add7 (5));
     </script>
 </body>
 </html>
