Added function declaration and expression solutions for practice 2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script>
+        // Practice 1
         // function expression
         let add7 = function (number) {
             return number + 7;
@@ -19,6 +20,24 @@
         function add7 (number) {
             return number + 7;
         }
+
+        console.log(add7 (5));
+
+
+         // Practice 2
+         //function declaration
+         let multiply = function (a, b) {
+            return a * b;
+        };
+        
+        multiply (3, 2);
+
+        //function expression
+        function multiply (a, b) {
+            return a * b;
+        }
+
+        multiply (3, 2);
 
         console.log(add7 (5));
     </script>
