Updated function names so to eliminate error

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         console.log(add7(5));
 
         // function declaration
-        function add7 (number) {
+        function add7$ (number) {
             return number + 7;
         }
 
-        console.log(add7 (5));
+        console.log(add7$ (5));
 
 
          // Practice 2
@@ -30,16 +30,14 @@
             return a * b;
         };
         
-        multiply (3, 2);
+        multiply (1, 2);
 
         //function expression
-        function multiply (a, b) {
+        function multiply$ (a, b) {
             return a * b;
         }
 
-        multiply (3, 2);
-
-        console.log(add7 (5));
+        multiply$ (8, 2);
     </script>
 </body>
 </html>
