Fixed 'capitalize' function arrow function call for question 3

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         string = prompt ('Type a sentence without any caps', 'like this, no caps');
 
-        capitalize (string[0].toUpperCase());
+        capitalize (string);
 
 
         //4. Write a function called lastLetter that takes a string and returns the very last letter of that string: lastLetter("abcd") should return "d"
